test/tests/stages/3_binary_operators/valid/associativity_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(6)
  /
  const int(3)
  /
  const int(2)
  ;
  }
