test/tests/stages/3_binary_operators/invalid_parse/malformed_paren.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(2)
  (
  -
  const int(3)
  )
  ;
  }
